@@ -1,3 +1,8 @@
+2003-05-14  Al Riddoch  <alriddoch@zepler.org>
+
+	* Mercator/Segment.h, Mercator/Segment.cpp: Add a destructor so
+	  we can free the vertex storage.
+
 2003-04-25  Al Riddoch  <alriddoch@zepler.org>
 
 	* Mercator/Segment.cpp, Mercator/Segment.h:
